# transformers-to-onnx

./: .gitignore  pyproject.toml
tests/: test_tranformers_to_onnx.py
tranformers_to_onnx/: app.py  convert.py  utils.py
