[tool.poetry]
name = "tranformers-to-onnx"
version = "0.1.0"
description = ""
authors = ["Chainyo <thomas.chaigneau@isen-ouest.yncrea.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.12.5"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
