[tool.poetry]
name = "tranformers-to-onnx"
version = "0.1.0"
description = "Convert a PyTorch model to ONNX format and save it to a file in one interface."
authors = ["Chainyo <thomas.chaigneau@isen-ouest.yncrea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.12.5"
streamlit = "^1.2.0"
torch = "^1.10.0"
onnxruntime = "^1.9.0"
onnxruntime-tools = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
